# vibingfarmer

./: .env.example  .gitbook.yaml  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  CLAUDE.md  DESIGN.md  FEATURES.md  GETTING_STARTED.md  README.md  SECURITY.md  SUMMARY.md  foundry.toml  package-lock.json  prd.md  skills-lock.json  slither.config.json
.claude/: launch.json  settings.json
.serena/: project.yml
base-contracts/: .gitignore  foundry.toml  package-lock.json  package.json
contracts/: AgentRegistry.sol  AgentVaultDepositor.sol  MockVault.sol
deploy/: .env.example  docker-compose.yml  vibingfarmer.service
deployments/: base-sepolia.json  stellar-testnet.json
design/: YIELD VIBING Prototype.html  styles.css
docs/: PLAN-REVIEW-FINDINGS.md  business-impact-model.md  business-roadmap-backlog.md  demo-script-indonesian.md  deploy-checklist.md  gate-approach-c-e2e.md  gate2-extension-e2e.md  product-demo-scenario.md  soroban-interfaces.md  soroban-kyc-seam.md  technical-architecture.md  technical-blockchain-usage.md  technical-security-privacy.md  technical-threat-model.md  vfwallet-demo-notes.md  wallet-feature.md
docs-site/: architecture.md  contracts.md  faq.md  features.md  how-it-works.md  introduction.md  quick-start.md  real-vs-demo.md  security-overview.md  skill-system.md
soroban/contracts/claim_topics_and_issuers/: Cargo.toml
soroban/contracts/claim_topics_and_issuers/src/: test.rs
soroban/contracts/exit_router/: Cargo.toml
soroban/contracts/exit_router/src/: lib.rs  test.rs
soroban/contracts/rwa_vault/: Cargo.toml
soroban/contracts/rwa_vault/src/: blend.rs  guardrail_iface.rs  integration_test.rs  lib.rs  storage.rs  test.rs  types.rs  vault.rs
soroban/contracts/rwa_vault/src/vault/: dividend.rs
(+962 files in other folders)
