[package]
name = "exit_router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
agent_account = { path = "../agent_account" }
autofarm_vault = { path = "../autofarm_vault" }
