[package]
name = "rwa_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = { workspace = true }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }
guardrail = { path = "../guardrail" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
registry = { path = "../registry" }
rwa_token = { path = "../rwa_token" }
claim_topics_and_issuers = { path = "../claim_topics_and_issuers" }
claim_issuer = { path = "../claim_issuer" }
identity = { path = "../identity" }
identity_registry_storage = { path = "../identity_registry_storage" }
identity_verifier = { path = "../identity_verifier" }
compliance = { path = "../compliance" }
ed25519-dalek = "2.1.1"
